@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST rails-4.2.zip 61508 RMD160 7759ef99250c3d914c89b6334b1558833364ffc1 SHA1 bdce1012d590fa148b64671cca0d3bed7dac620f SHA256 74882e4e17ec057ec2d6a601df1005eca57ae60f519d3c546676ec2d521fd768
+DIST rails-4.3.zip 62381 RMD160 2af859797b994e01eada32e544c76c46b7c4ea67 SHA1 c7f361d168cc65c1c2f9b0751843034e8a82cee9 SHA256 4d9bf826803f1aa861a72a1981e831a8cd329c47cc035ab2651203a379800f32
 EBUILD rails-4.2.ebuild 505 RMD160 3c8e7e1ab80ba8bb78b1e422d93fb91ecf486f13 SHA1 3444c0ce0de18909358a9b80cbc3e560fb7656ff SHA256 dc17e90c70acfa4bd3e808c83fceaf05b78636c37958727177eba53d055e8fcf
-MISC ChangeLog 1412 RMD160 1b75912bd2f21afd2eb2a13202b51fe5a912032d SHA1 101b856a61abffd0cee423d44df1b3d6984d7b98 SHA256 3a8a6c6e47f8091548272683041c3969ae3b0036d0be1c01c5239e58e0cec91b
+EBUILD rails-4.3.ebuild 507 RMD160 05c31fb3d28972ad7831f3eb6388ed7ea2d7313e SHA1 dfdaf15938a05cd21aa770f9fb06018e3f7d11e7 SHA256 5cec48baf2572b5bff535404c183a58f0d9a23b6ee37d2f964cc54da30620093
+MISC ChangeLog 1526 RMD160 870a7099ee65ebb7e94603839d9c4766e919272d SHA1 e8670ce59d84bd12e035ec15d971ffa5a993250e SHA256 8e06eb064fed279b92ae9b7dd55feaab8a5c04da7b57c1d330213ee8afd854ad
 MISC metadata.xml 1012 RMD160 750e9c515b2372b44101988ee8e2972a72056992 SHA1 f295bb28f5ab056c8c5044ca888771fbb179a121 SHA256 08d1b5d8bcc6e846910d10bfcf2324adbb6056621b4bf83c3f50a61d4a7e4e80
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.14 (GNU/Linux)
+Version: GnuPG v2.0.16 (GNU/Linux)
 
-iEYEARECAAYFAkvG3T8ACgkQzJrj3cAXR0msjACeOC15vzgT9YFTS7Jve5e3RH9z
-L1AAoLPi5FuJFfA7trkrYnQ/DFcLi4LO
-=Hryr
+iEYEARECAAYFAkyUH9IACgkQzJrj3cAXR0mJBACcCYX1ZvF/Hu7plvcV4JYjZdw3
+zjQAnjk4sYZyXFYYpvnAIeGWH/AeGV7h
+=dNkz
 -----END PGP SIGNATURE-----
