@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*rails-4.3 (18 Sep 2010)
+
+  18 Sep 2010; James Rowe <jnrowe@gmail.com> +rails-4.3.ebuild:
+  Version bump [#177].
+
   15 Apr 2010; James Rowe <jnrowe@gmail.com> -rails-4.1.ebuild,
   rails-4.2.ebuild:
   Keyworded x86.
